--- a/TP3/src/main/webapp/WEB-INF/web.xml
+++ b/TP3/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,14 @@
             30
         </session-timeout>
     </session-config>
+    <servlet>
+        <servlet-name>init</servlet-name>
+        <servlet-class>Servlet.init</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>init</servlet-name>
+        <url-pattern>/init</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
         </welcome-file-list>
